# TimeLite

./: Cargo.toml  README.md
src/: constants.rs  duration.rs  lib.rs
