[package]
name = "timelite"
version = "1.0.4"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "TimeLite is a simple library to convert days, weeks, months and years into seconds."
homepage = "https://github.com/charleschege/TimeLite"
repository = "https://github.com/charleschege/TimeLite"
license = "Apache-2.0"
keywords = ["time", "nanoseconds", "seconds", "date", "convertor"]
categories = ["date-and-time"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tai64 = "3.1.0"
